# django

./: pyproject.toml
quotessite/quotessite/: settings.py
quotessite/users/: urls.py  views.py
quotessite/users/templates/users/: signin.html
