[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
django = "^4.2.7"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
